# c3-agentic-ai-project

./: .gitignore  README.md  Udaplay_01_solution_project.ipynb  Udaplay_01_starter_project.ipynb  Udaplay_02_solution_project.ipynb  Udaplay_02_starter_project.ipynb  dashboard.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
docs/: PROJECTT_RUBRIC.md  agent_evaluation.md  chromadb_rag_explanation.md  long_term_memory.md
lib/: agents.py  dashboard_logs.py  evaluation.py  llm.py  messages.py  vector_db.py
