[project]
name = "c3-agentic-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "pdfplumber>=0.10.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "tavily-python>=0.3.0",
    "typing-extensions>=4.9.0",
]

[dependency-groups]
dev = [
    "chromadb>=0.4.22",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "mypy>=1.8.0",
    "openai>=1.12.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
    "tavily-python>=0.3.0",
    "typing-extensions>=4.9.0",
]
